// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fulfilled types 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT",
}
`;

exports[`fulfilled types 2`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "DELETE_ACCOUNT",
}
`;

exports[`fulfilled types 3`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "DELETE_ACCOUNTS",
}
`;

exports[`fulfilled types 4`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_ACCOUNT",
}
`;

exports[`fulfilled types 5`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_ACCOUNTS",
}
`;

exports[`fulfilled types 6`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD",
}
`;

exports[`fulfilled types 7`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": true,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD_STEP_POLICY",
}
`;

exports[`fulfilled types 8`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "INVALID_ACCOUNT_WIZARD_STEP_POLICY",
}
`;

exports[`fulfilled types 9`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD_STEP_ROLE",
}
`;

exports[`fulfilled types 10`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "INVALID_ACCOUNT_WIZARD_STEP_ROLE",
}
`;

exports[`fulfilled types 11`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": true,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD_STEP_ARN",
}
`;

exports[`fulfilled types 12`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "INVALID_ACCOUNT_WIZARD_STEP_ARN",
}
`;

exports[`fulfilled types 13`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": true,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_SHOW",
}
`;

exports[`fulfilled types 14`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "EDIT_ACCOUNT_SHOW",
}
`;

exports[`fulfilled types 15`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNT_HIDE",
}
`;
